--- a/projects.html
+++ b/projects.html
@@ -43,11 +43,11 @@
                 </div>
                 <div class="listing">
                     <div id="label">
-                        <h3>A project yet to be assigned.</h3>
+                        <h3>A Simon Game</h3>
                         <hr id="verticalhr">
-                        <p></p>
+                        <p>6.12.20 ~ HTML, CSS, and JS</p>
                         <hr id="verticalhr">
-                        <a href=""><button id="button">View Project</button></a>
+                        <a href="./Simon.html"><button id="button">View Project</button></a>
                     </div>
                 </div>
                 <div class="listing">
